--- a/Bejeweled/res/values/strings.xml
+++ b/Bejeweled/res/values/strings.xml
@@ -3,6 +3,19 @@
 
     <string name="app_name">Bejeweled</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_game_menu">GameMenuActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="m_quit">Quitter</string>
+    <string name="m_newGame">Nouvelle partie</string>
+    <string name="m_score">Score</string>
+    <string name="m_return">Retour</string>
+    <string name="m_speedMode">Mode vitesse</string>
+    <string name="m_tacticalMode">Mode tactique</string>
+    <string name="m_restart">Recommencer</string>
+    <string name="m_pause">Pause</string>
+    <string name="m_play">Reprendre</string>
+    <string name="m_yesHigh">OUI</string>
+    <string name="m_noHigh">NON</string>
+    <string name="m_menu">Menu</string>
 
 </resources>
