--- a/Bejeweled/res/values/strings.xml
+++ b/Bejeweled/res/values/strings.xml
@@ -3,7 +3,6 @@
 
     <string name="app_name">Bejeweled</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_game_menu">GameMenuActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="m_quit">Quitter</string>
     <string name="m_newGame">Nouvelle partie</string>
@@ -17,7 +16,12 @@
     <string name="m_yesHigh">OUI</string>
     <string name="m_noHigh">NON</string>
     <string name="m_menu">Menu</string>
+    <string name="title_activity_game_menu">GameMenuActivity</string>
     <string name="title_activity_game_score">GameScoreActivity</string>
     <string name="title_activity_list_score_speed">ListScoreSpeed</string>
+    <string name="title_activity_game_mode">GameModeActivity</string>
+    <string name="m_okHigh">OK</string>
+    <string name="m_pseudo">Pseudo</string>
+    <string name="m_interface_desciption">interface box dialog</string>
 
 </resources>
