Ajout du squelette du service "game" et de l'activité.

--- a/Bejeweled/res/values/strings.xml
+++ b/Bejeweled/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="m_okHigh">OK</string>
     <string name="m_pseudo">Pseudo</string>
     <string name="m_interface_desciption">interface box dialog</string>
+    <string name="title_activity_game">GameActivity</string>
 
 </resources>
