--- a/Bejeweled/res/values/strings.xml
+++ b/Bejeweled/res/values/strings.xml
@@ -25,5 +25,8 @@
     <string name="m_interface_desciption">interface box dialog</string>
     <string name="title_activity_game">GameActivity</string>
     <string name="title_activity_i">IActivity</string>
+    <string name="txt_timer">Timer:</string>
+    <string name="txt_chaines">Chaines:</string>
+    <string name="txt_coupsRestants"/>
 
 </resources>
